fix(review): [major] Fix import paths and add missing test coverage
- Fixed: test_handler_pattern_lifecycle.py:37 - ModelGateSnapshot import from wrong module
- Fixed: test_node_pattern_lifecycle_integration.py:38 - Same ModelGateSnapshot import fix
- Fixed: contract.yaml:46,187 - Module path 'intelligence_reducer' → 'node_intelligence_reducer'
- Added: test for ValueError when producer set but topic_env_prefix is None

Review iteration: 2/10

--- a/src/omniintelligence/nodes/node_pattern_lifecycle_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_lifecycle_effect/contract.yaml
@@ -43,7 +43,7 @@ description: >
 # =============================================================================
 input_model:
   name: "ModelPayloadUpdatePatternStatus"
-  module: "omniintelligence.nodes.intelligence_reducer.models"
+  module: "omniintelligence.nodes.node_intelligence_reducer.models"
   description: "Intent payload from reducer with pattern_id, from/to status, and request_id"
 
 output_model:
@@ -184,7 +184,7 @@ event_bus:
 
   subscribe_topic_metadata:
     "onex.cmd.omniintelligence.pattern-lifecycle-transition.v1":
-      schema_ref: "omniintelligence.nodes.intelligence_reducer.models.ModelPayloadUpdatePatternStatus"
+      schema_ref: "omniintelligence.nodes.node_intelligence_reducer.models.ModelPayloadUpdatePatternStatus"
       description: "Pattern lifecycle transition intents from the reducer"
 
   publish_topic_metadata:
