feat(OMN-1424): Implement pattern_matching_compute node
Implements the pattern_matching_compute node to match code against
learned patterns from the pattern library.

## Changes

### Handlers (NEW)
- `handler_pattern_matching.py`: Pure matching algorithms
  - Keyword overlap scoring (Jaccard similarity)
  - Regex/substring matching with fallback
- `handler_compute.py`: Orchestration, timing, error handling
- `protocols.py`: TypedDict definitions for handler I/O
- `exceptions.py`: Domain-specific errors (PATMATCH_001, PATMATCH_002)

### Models (MODIFIED)
- Added `ModelPatternRecord` to input model for pattern library
- Added `patterns` field to `ModelPatternMatchingInput`
- Added `ModelPatternMatch` rich output structure
- Added `matches` field to output for detailed match info

### Node (MODIFIED)
- Removed `is_stub: ClassVar[bool] = True` marker
- Converted to thin shell (76 → 57 lines)
- Delegates all logic to handler

### Contract (MODIFIED)
- Added `handler_routing` section for declarative routing
- Updated operations to include new fields

### Tests (NEW)
- 15 tests for pure matching logic
- 10 tests for compute handler orchestration
- Updated purity test stub list

## Algorithms

| Algorithm | Operations | Description |
|-----------|------------|-------------|
| keyword_overlap | match, similarity, classify | Jaccard similarity |
| regex_match | validate | Regex/substring matching |

Closes OMN-1424

--- a/src/omniintelligence/nodes/node_pattern_matching_compute/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_matching_compute/contract.yaml
@@ -23,16 +23,45 @@ output_model:
   description: "Output containing matched patterns and confidence scores."
 operations:
   - name: "match_patterns"
-    description: "Match patterns in code"
+    description: "Match patterns in code using keyword overlap or regex algorithms"
     input_fields:
       - code_snippet
+      - patterns
+      - operation
       - project_name
       - context
     output_fields:
       - success
       - patterns_matched
       - pattern_scores
+      - matches
       - metadata
+# Handler Routing (Declarative Pattern)
+# =====================================
+# Compute nodes use a single handler that routes based on operation type.
+handler_routing:
+  routing_strategy: "operation_match"
+  handlers:
+    - operation: "match"
+      handler:
+        function: "handle_pattern_matching_compute"
+        module: "omniintelligence.nodes.node_pattern_matching_compute.handlers"
+        type: "sync"
+    - operation: "similarity"
+      handler:
+        function: "handle_pattern_matching_compute"
+        module: "omniintelligence.nodes.node_pattern_matching_compute.handlers"
+        type: "sync"
+    - operation: "classify"
+      handler:
+        function: "handle_pattern_matching_compute"
+        module: "omniintelligence.nodes.node_pattern_matching_compute.handlers"
+        type: "sync"
+    - operation: "validate"
+      handler:
+        function: "handle_pattern_matching_compute"
+        module: "omniintelligence.nodes.node_pattern_matching_compute.handlers"
+        type: "sync"
 # Metadata Model (for typed metadata in output)
 # =============================================
 # The output model uses ModelPatternMatchingMetadata for type-safe metadata
@@ -43,17 +72,13 @@ metadata_model:
   module: "omniintelligence.nodes.node_pattern_matching_compute.models"
   description: "Typed metadata for pattern matching output (status, message, tracking_url, operation,
     etc.)"
-# Protocol Dependencies (Future)
-# ==============================
-# Status: Backlog - Phase 3 (v0.4.0)
-# When implementing full functionality, a pattern library protocol will be needed.
-# Tracked: docs/migrations/omniarchon_to_omniintelligence.md (Phase 3 - Protocols)
+# Protocol Dependencies
+# =====================
+# This is a pure compute node - no protocol dependencies needed.
+# Patterns are passed via the input model (ModelPatternRecord[]) following
+# the compute node purity principle. The orchestrator fetches patterns from
+# storage and passes them to this node.
 dependencies: []
-# Future protocol dependency (uncomment when protocols module exists):
-# - name: "pattern_library"
-#   type: "protocol"
-#   module: "omniintelligence.protocols"
-#   description: "Pattern library for matching"
 # Error Handling Configuration
 # ============================
 error_handling:
@@ -75,9 +100,11 @@ health_check:
 metadata:
   author: "OmniNode Team"
   created: "2025-11-14"
-  updated: "2026-01-18"
+  updated: "2026-02-05"
   tags:
     - "ONEX"
     - "compute"
     - "patterns"
     - "matching"
+    - "keyword_overlap"
+    - "regex_match"
